# rust_poker_solver

./: .dockerignore  .gitmodules  Cargo.toml  Makefile  build.rs  dockerfile
.github/workflows/: build.yaml
proto/: solver.proto
proto/regnivon/v1/: common.proto  solver.proto
src/: main.rs
src/cfr/: game.rs  game_params.rs  mod.rs  traversal.rs
src/messaging/: mod.rs
src/nodes/: action_node.rs  all_in_showdown_node.rs  chance_node.rs  mod.rs  node.rs  showdown_node.rs  terminal_node.rs
src/ranges/: combination.rs  mod.rs  range_manager.rs  utility.rs
