[package]
name = "poker-solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units=1
debug = 1

[rust]
debuginfo-level = 1


[dependencies]
rust_poker =  { version = "0.1.14" }
rayon = {version = "1.5.1"}
permutation = "0.2.5"
enum_dispatch = "0.3.7"
tokio = { version = "1.12.0", features = ["full"] }
tonic = "0.5"
prost = "0.8.0"
tonic-reflection = "0.2.0"

[build-dependencies]
tonic-build = "0.5"
