[package]
name = "poker-solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units=1
debug = 1

[rust]
debuginfo-level = 1


[dependencies]
rust_poker =  { version = "0.1.14", features = ["indexer"]}
rayon = {version = "1.5.1"}
permutation = "0.2.5"
enum_dispatch = "0.3.7"
lapin =  { version = "2.0.1" }
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
tokio = { version = "1.12.0", features = ["macros", "time", "rt-multi-thread"] }
futures-lite = "1.12.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
serde_json = "1.0"
serde = "1.0.136"
