[package]
name = "poker-solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
debug = 1

[rust]
debuginfo-level = 1


[dependencies]
rust_poker = { version = "0.1.14", features = ["indexer"] }
rayon = { version = "1.5.1" }
permutation = "0.2.5"
enum_dispatch = "0.3.7"
lapin = { version = "2.0.1" }
tokio = { version = "1.12.0", features = ["macros", "time", "rt-multi-thread"] }
futures-lite = "1.12.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
serde_json = "1.0"
serde = "1.0.136"
serde_with = "1.12.0"
cloud-storage = "0.10"
tracing = "0.1.32"
tracing-subscriber = " 0.3.9"
rand = "0.8.5"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
